--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,9 +10,7 @@
     <!--шапка сайта-->
     <header>
       <nav class="menu">
-        <a href="/">
-          <p><span lang="en">Web</span>Studio</p>
-        </a>
+        <a href="/"> <span lang="en">Web</span>Studio</a>
         <ul>
           <li><a href="" target="_blank">Студія</a></li>
           <li><a href="" target="_blank">Портфоліо</a></li>
@@ -58,9 +56,13 @@
       <!--чим ми займаємося-->
       <section>
         <h2>Чим ми займаємося</h2>
-        <img src="./images/img1.jpg" alt="десктопні додатки" />
-        <img src="./images/img2.jpg" alt="мобільні додатки" />
-        <img src="./images/img3.jpg" alt="дизайнерські рішення" />
+        <ul>
+          <li><img src="./images/img1.jpg" alt="десктопні додатки" width="370" height="294" /></li>
+          <li><img src="./images/img2.jpg" alt="мобільні додатки" width="370" height="294" /></li>
+          <li>
+            <img src="./images/img3.jpg" alt="дизайнерські рішення" width="370" height="294" />
+          </li>
+        </ul>
       </section>
 
       <!--наша команда-->
@@ -68,17 +70,17 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/team/designer.jpg" alt="designer" width="200" />
+            <img src="./images/team/designer.jpg" alt="designer" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/team/developer.jpg" alt="developer" width="200" />
+            <img src="./images/team/developer.jpg" alt="developer" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team/marketing.jpg" alt="marketing" width="200" />
+            <img src="./images/team/marketing.jpg" alt="marketing" width="270" height="260" />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
@@ -93,13 +95,13 @@
 
     <!--підвал-->
     <footer>
+      <a href="/"> <span lang="en">Web</span>Studio</a>
       <address>
-        <a href="/">
-          <p><span lang="en">Web</span>Studio</p>
-        </a>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <p>info@devstudio.com</p>
-        <p>+38 096 111 11 11</p>
+        <ul>
+          <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
